# contest-maker

./: CMakeLists.txt  LICENSE  README.md  build.bash
include/: SystemHelper.hpp  TemplateManager.hpp
include/app/: DebugWindow.hpp  MainWindow.hpp
include/core/: ContestStructureBuilder.hpp  FileSystemManager.hpp  StreamRedirector.hpp  TemplateManager.hpp
src/: ContestStructureBuilder.cpp  FileSystemManager.cpp  SystemHelper.cpp  TemplateManager.cpp  main.cpp
src/app/: DebugWindow.cpp  MainWindow.cpp
src/core/: ContestStructureBuilder.cpp  FileSystemManager.cpp  StreamRedirector.cpp  SystemHelper.cpp  TemplateManager.cpp
